--- a/web/tmpl/User.tmpl
+++ b/web/tmpl/User.tmpl
@@ -157,7 +157,7 @@ function verify_image_file(file) {
 </table>
 <br>
 
-<span class="large"><img src="picts/notebook-icon.png" width='20' height='20'/> <TMPL_IF NAME="IS_USER">My </TMPL_IF>Notebooks <span class='link ui-icon ui-icon-extlink' onclick="window.open('Lists.pl')"></span></span>
+<span class="large"><img src="picts/notebook-icon.png" width='20' height='20'/> <TMPL_IF NAME="IS_USER">My </TMPL_IF>Notebooks <span class='link ui-icon ui-icon-extlink' onclick="window.open('Notebooks.pl')"></span></span>
 <div class="small ui-widget-content ui-corner-all" style="width:670px;height:100px;overflow-y:auto;resize:both;">
 <TMPL_VAR NAME='LISTS'>
 </div>
