--- a/web/tmpl/Notebooks.tmpl
+++ b/web/tmpl/Notebooks.tmpl
@@ -25,17 +25,6 @@ function input_focus(div_id) {
 }
 
 //Filters Rows for search_text - Case sensitive as of now, and searches hidden columns...
-/*
-function filter_rows (search_text){
-	if(!search_text) { $("#list_table_body tr:hidden").show(0);}
-	else if (search_text.length >= 3) {
-		$("#list_table_body tr:hidden").show(0);
-		if( $('#search_type').val() == 1 ) { $("#list_table_body tr:not(:icontains('"+search_text+"'))").hide(); }
-		else { $("#list_table_body tr:icontains('"+search_text+"')").hide(); }
-	}
-	$('#filter_count').html('Showing ' + $("#list_table_body tr:visible").length + ' of ' + $("#list_table_body tr").length + ' lists');
-}
-*/
 function filter_rows (search_text) { // fast filter search
 	var visible = 0;
 	var total = 0;
@@ -88,17 +77,6 @@ function filter_rows (search_text) { // fast filter search
 	//filter_busy(0);
 	$('#filter_count').html('Showing ' + visible + ' of ' + total + ' rows');
 }
-
-/*
-function filter_busy(busy) {
-	if (busy) {
-		$('#filter_busy').fadeIn();
-	}
-	else {
-		$('#filter_busy').hide();
-	}
-}
-*/
 
 function run_get_lists_for_user(opts){
 	if (!opts) { opts={}; }
@@ -162,19 +140,19 @@ function delete_list () {
 }
 
 function dialog_delete_list (opts) {
-	$("#list_delete_box").dialog("option", "title", "Delete List?");
+	$("#list_delete_box").dialog("option", "title", "Delete Notebook?");
 	$("#list_delete_box").dialog("option", "width", "450");
 	$("#list_delete_box").dialog('open');
 	$('#list_delete_lid').val(opts.lid);
 }
 </SCRIPT>
 
-<div id="lists"><TMPL_VAR NAME=LIST_INFO></div>
+<div id="lists"><TMPL_VAR NAME="LIST_INFO"></div>
 
 <div id="edit_box" class="dialog_box"></div>
 
 <div id="list_delete_box" class="dialog_box" style='display:none;' align='center'>
-Are you sure you want to permanently delete this list?<p>
+Are you sure you want to permanently delete this notebook?<p>
  <div>
   <input type='hidden' id='list_delete_lid'>
   <span style="font-size: .75em" class='ui-button ui-button-go ui-corner-all' onClick="delete_list();">Yes</span>
@@ -188,15 +166,6 @@ Are you sure you want to permanently delete this list?<p>
 <TMPL_IF LIST_STUFF>
 <SCRIPT language="JavaScript">
 $(document).ready(function(){
-/*
-	// Create new case-insensitive "contains" selector function in jQuery
-	jQuery.expr[":"].icontains = jQuery.expr.createPseudo(function(arg) {
-		return function( elem ) {
-			return jQuery(elem).text().toUpperCase().indexOf(arg.toUpperCase()) >= 0;
-		};
-	});
-*/
-
 	// Setup filter input
 	$("#search_bar").keyup( function() { filter_rows( $(this).val() ); });
 	$('#search_type').mouseup( function() { filter_rows( $('#search_bar').val() ); });
@@ -232,15 +201,15 @@ $(document).ready(function(){
  <tfoot>
   <tr>
    <td id='create_list_hidden' colspan='9' height='26'>
-    <span style="font-size: 1em" class='ui-button ui-button-go ui-corner-all' onClick="$('#create_list_hidden').hide(); $('#create_list_shown').fadeIn('fast');">Create new list</span>
+    <span style="font-size: 1em" class='ui-button ui-button-go ui-corner-all' onClick="$('#create_list_hidden').hide(); $('#create_list_shown').fadeIn('fast');">Create new notebook</span>
    </td>
   </tr>
   <tr id='create_list_shown' style="display:none;">
    <td><input type="textbox" size="8" name="name" id="name" value='Name' style="font-style:italic;color:gray;" onFocus="input_focus('name')"></td>
    <td><input type="textbox" size="32" name="desc" id="desc" value='Description' style="font-style:italic;color:gray;" onFocus="input_focus('desc')"></td>
    <td><select id="type">
-    <TMPL_LOOP NAME=TYPE_LOOP>
-     <OPTION value=<TMPL_VAR NAME=TID>><TMPL_VAR NAME=NAME></OPTION>
+    <TMPL_LOOP NAME="TYPE_LOOP">
+     <OPTION value=<TMPL_VAR NAME="TID">><TMPL_VAR NAME="NAME"></OPTION>
     </TMPL_LOOP>
     </select>
    </td>
@@ -248,24 +217,24 @@ $(document).ready(function(){
   </tr>
  </tfoot>
  <tbody align="left" valign="top" id="list_table_body" class="small">
-  <TMPL_LOOP NAME=LIST_LOOP>
+  <TMPL_LOOP NAME="LIST_LOOP">
   <tr valign="middle">
-   <td><TMPL_VAR NAME=NAME></td>
-   <td><TMPL_VAR NAME=DESC></td>
-   <td><TMPL_VAR NAME=TYPE></td>
-   <td><TMPL_VAR NAME=DATA></td>
-   <td><TMPL_VAR NAME=ANNO></td>
-   <td><TMPL_VAR NAME=GROUP></td>
-   <td align='center'><TMPL_VAR NAME=RESTRICTED></td>
-   <td align='center'><TMPL_VAR NAME=EDIT_BUTTON></td>
-   <td align='center'><TMPL_VAR NAME=DELETE_BUTTON></td>
+   <td><TMPL_VAR NAME="NAME"></td>
+   <td><TMPL_VAR NAME="DESC"></td>
+   <td><TMPL_VAR NAME="TYPE"></td>
+   <td><TMPL_VAR NAME="DATA"></td>
+   <td><TMPL_VAR NAME="ANNO"></td>
+   <td><TMPL_VAR NAME="GROUP"></td>
+   <td align='center'><TMPL_VAR NAME="RESTRICTED"></td>
+   <td align='center'><TMPL_VAR NAME="EDIT_BUTTON"></td>
+   <td align='center'><TMPL_VAR NAME="DELETE_BUTTON"></td>
   </tr>
   </TMPL_LOOP>
  </tbody>
 </table>
 </TMPL_IF> <!-- LIST_STUFF -->
 
-<TMPL_IF NAME=ADMIN_AREA>
+<TMPL_IF NAME="ADMIN_AREA">
 <hr>
 Admin Functions:<br>
 </TMPL_IF> <!-- ADMIN_AREA -->
