--- a/web/tmpl/User.tmpl
+++ b/web/tmpl/User.tmpl
@@ -183,7 +183,7 @@ function verify_image_file(file) {
 		<TMPL_LOOP NAME="GROUP_LOOP">
 		<tr valign="top">
 			<td style="white-space:nowrap;"><TMPL_VAR NAME="GROUP_NAME"></td>
-			<td style="white-space:nowrap;"><TMPL_VAR NAME="GROUP_ROLE"></td>
+			<td style="white-space:nowrap;">(<TMPL_VAR NAME="GROUP_ROLE">)</td>
 			<td><TMPL_VAR NAME="GROUP_DESC"></td>
 		</tr>
 		</TMPL_LOOP>
