--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -162,7 +162,7 @@ $(document).ready( function() {
         <li><a id="forums" href="https://forums.iplantcollaborative.org/viewforum.php?f=10" target="_self">Forums</a></li>
 	<li><a href='javascript:void(0)'>Data</a>
 	 <ul>
-	   <li><a href="UserPage.pl" target="_self">Profile</a></li>
+	   <li><a href="User.pl" target="_self">Profile</a></li>
 	   <li><a href="Groups.pl" target="_self">Groups</a></li>
 	   <li><a href="Notebooks.pl" target="_self">Notebooks</a></li>
 	   <li><a href="History.pl" target="_self">History</a></li>
